--- a/public/slides/3dd3/html/css3d.html
+++ b/public/slides/3dd3/html/css3d.html
@@ -117,7 +117,7 @@
             {f: rotateX, b: _rotateX},
             {f: showBorderAndTooltip, b: _showBorderAndTooltip},
             {f: showCodeAnimate, b: _showCodeAnimate},
-            {f: rotate, b: _rotate}
+            {f: rotate, b: _rotate, demo: true}
         ])
     })()
 
