--- a/public/slides/3dd3/html/graph.html
+++ b/public/slides/3dd3/html/graph.html
@@ -169,7 +169,7 @@
             imageStepAngels.step,
             imageCssCode.reverseStep,
             imageStepWater.step,
-            imageStepBird.step,
+            Object.assign({}, imageStepBird.step, {demo: true}),
         ])
 
     })()
