--- a/public/slides/3dd3/html/title.html
+++ b/public/slides/3dd3/html/title.html
@@ -77,7 +77,7 @@
 
 
         slidAR.steps.set("title", [
-            {f: animate, b: _animate},
+            {f: animate, b: _animate, demo: true},
         ]);
     })()
 </script>
